# freyja_trading

./: .editorconfig  .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  render.yaml
backend/: pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_initial.py  0002_auth.py  0003_auth_email_flows.py  0004_remove_email_verification.py  0005_catalog.py  0006_catalog_display_names.py  0007_seed_catalog_v1.py  0008_catalog_integrity.py  0009_seed_integrity_guard.py  0010_provider_mappings.py
backend/src/freyja_backend/: main.py
backend/src/freyja_backend/api/: deps.py
backend/src/freyja_backend/application/: auth_service.py
backend/src/freyja_backend/core/: config.py  cookies.py  database.py  email.py  security.py
backend/src/freyja_backend/db/: __init__.py  catalog_seed_v1.py  deps.py  session.py
backend/src/freyja_backend/scripts/: create_owner.py
backend/tests/: conftest.py  test_app.py  test_quality_script.py
backend/tests/api/: test_auth.py  test_auth_email_flows.py  test_cors.py  test_health.py  test_trusted_host.py
backend/tests/application/: test_auth_email_flows.py  test_auth_service.py
backend/tests/integration/: test_catalog_provider.py  test_catalog_schema.py  test_catalog_seed.py  test_database.py  test_migrations.py
backend/tests/scripts/: test_create_owner.py
backend/tests/unit/: test_config.py  test_database_settings.py  test_db_deps.py  test_deploy_workflow.py  test_email.py  test_frontend_build_fail_closed.py  test_models_repr.py  test_render_blueprint.py  test_security.py
(+59 files in other folders)
