[project]
name = "freyja-backend"
version = "0.1.0"
description = "Freyja 2.0 backend"
requires-python = "==3.12.*"
dependencies = [
    "alembic>=1.16,<2",
    "argon2-cffi>=23.1,<26",
    "email-validator>=2.2,<3",
    "fastapi==0.139.2",
    "psycopg[binary]>=3.2,<4",
    "pydantic-settings>=2,<3",
    "sqlalchemy>=2,<3",
    "uvicorn>=0.34,<1",
]

[dependency-groups]
dev = [
    "httpx2>=2,<3",
    "pytest>=8,<9",
    "pytest-cov>=6,<7",
    "ruff>=0.8,<1",
    "mypy>=1.14,<2",
]

[project.scripts]
freyja-create-owner = "freyja_backend.scripts.create_owner:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/freyja_backend"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "N", "C4", "SIM", "ARG", "PERF", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["freyja_backend"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers"
testpaths = ["tests"]
filterwarnings = ["error"]

[tool.coverage.run]
source = ["freyja_backend"]
branch = true

[tool.coverage.report]
show_missing = true
